--- a/Libraries/changelog.txt
+++ b/Libraries/changelog.txt
@@ -1,3 +1,8 @@
+v0.5.3
+	- rewritten cfg::Csv
+	- removed liblogger
+	- libraries compiled in x64 where possible
+
 v0.2.3
 	- added leveld library
 	- bugfixes in libconfig
