--- a/Libraries/changelog.txt
+++ b/Libraries/changelog.txt
@@ -1,6 +1,7 @@
-v0.6.1
+v0.6.2
 	- added docs for LevelD format
 	- added id field to LevelD actor objects
+	- VS libraries are also build in C++17
 
 v0.5.3
 	- rewritten cfg::Csv
