libs: [BUGFIX] Fix prepare-release.bat

--- a/Libraries/changelog.txt
+++ b/Libraries/changelog.txt
@@ -1,3 +1,7 @@
+v0.X.X
+	- added libbitmap
+	- TODO: fix c++17 in top level cmake
+
 v0.6.2
 	- added docs for LevelD format
 	- added id field to LevelD actor objects
