--- a/Libraries/changelog.txt
+++ b/Libraries/changelog.txt
@@ -1,17 +1,21 @@
+vX.X.X
+ * [FIX] cfg::Args::getArgumentValue throws if argument was not set
+ * [TESTS] Tests are now written in Catch2
+
 v0.7.0
-	- added libbitmap
+ * added libbitmap
 
 v0.6.2
-	- added docs for LevelD format
-	- added id field to LevelD actor objects
-	- VS libraries are also build in C++17
+ * added docs for LevelD format
+ * added id field to LevelD actor objects
+ * VS libraries are also build in C++17
 
 v0.5.3
-	- rewritten cfg::Csv
-	- removed liblogger
-	- libraries compiled in x64 where possible
+ * rewritten cfg::Csv
+ * removed liblogger
+ * libraries compiled in x64 where possible
 
 v0.2.3
-	- added leveld library
-	- bugfixes in libconfig
-	- bugfixes in libstrings
+ * added leveld library
+ * bugfixes in libconfig
+ * bugfixes in libstrings
