--- a/changelog.txt
+++ b/changelog.txt
@@ -1,24 +1,35 @@
-v1.0.1
- * Fix jsbloat internals
+vX.X.X
+ * Fixed jsbloat internals
+ * Added tileWidth and tileHeight to LevelD::Mesh
+
+---
 
 v1.0.0
- * whole repository is packaged
- * tests are written in Catch2
+ * Whole repository is packaged
+ * Tests are written in Catch2
  * jsbloat integrated with release
- * [FIX] cfg::Args::getArgumentValue throws if argument was not set
+ * Fixed cfg::Args::getArgumentValue throws if argument was not set
+
+---
 
 v0.7.0
  * added libbitmap
+
+---
 
 v0.6.2
  * added docs for LevelD format
  * added id field to LevelD actor objects
  * VS libraries are also build in C++17
 
+---
+
 v0.5.3
  * rewritten cfg::Csv
  * removed liblogger
  * libraries compiled in x64 where possible
+
+---
 
 v0.2.3
  * added leveld library
