--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v1.X.X
+ * Fixed LevelD parser to be version aware
+
+---
+
 v1.1.1
  * Fixed jsbloat internals
  * Added tileWidth and tileHeight to LevelD::Mesh
