--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,10 @@
-v1.1.1
+v1.1.1 changelog:
  * Fixed jsbloat internals
  * Added tileWidth and tileHeight to LevelD::Mesh
 
 ---
 
-v1.0.0
+v1.0.0 changelog:
  * Whole repository is packaged
  * Tests are written in Catch2
  * jsbloat integrated with release
@@ -12,26 +12,26 @@ v1.0.0
 
 ---
 
-v0.7.0
+v0.7.0 changelog:
  * added libbitmap
 
 ---
 
-v0.6.2
+v0.6.2 changelog:
  * added docs for LevelD format
  * added id field to LevelD actor objects
  * VS libraries are also build in C++17
 
 ---
 
-v0.5.3
+v0.5.3 changelog:
  * rewritten cfg::Csv
  * removed liblogger
  * libraries compiled in x64 where possible
 
 ---
 
-v0.2.3
+v0.2.3 changelog:
  * added leveld library
  * bugfixes in libconfig
  * bugfixes in libstrings
