--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v1.X.X changelog:
+ * Added methods for base64 encode/decode to libstrings
+
+---
+
 v1.3.2 changelog:
  * Critical fix: LevelD numbers weren't stored as big endian
  * Fixed documentation for Players block in LevelD files
