[FIX] Drop the ! option from cfg::Args setup

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 v1.X.X changelog:
  * Added methods for base64 encode/decode to libstrings
  * Added EcmaScript6 binding for LevelD library
+ * Drop the ! parameter for cfg::Args setup
 
 ---
 
