Critical fix: Writing out of memory in LevelD
If an array used in LevelD is bigger than ALLOC_CHUNK_SIZE then not enough memory was allocated for output serialization, resulting in memory accesses out of bounds and corrupted output files.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v1.x.x changelog:
+ * Critical fix: LevelD did not correctly allocate memory when serializing data resulting in corrupted files
+ * Fixed broken tables in LevelD docs
+
+---
+
 v1.6.1 changelog:
  * Added methods for base64 encode/decode to libstrings
  * Added EcmaScript6 binding for LevelD library
