Added convenience wrappers for unzip and wget

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@ v1.7.x
  * Debug files for MSVC are bundled with release
  * Catch2 is now fetched during compilation time, slightly speeding up build times
  * Improved exception message when trying to write too big string in LevelD
+ * Added convenience wrappers for unzip and wget
 
 ---
 
